updating Dockerfile and .dockerignore and updating swagger
